--- a/report/report/related.tex
+++ b/report/report/related.tex
@@ -49,7 +49,7 @@ The coherence~$\mu(U)$ is a measure of spread of the vectors $u_1, \dots, u_n$ w
 %------------------------------------------------------------------------------
 \subsubsection{Main result}
 %
-\begin{theorem}[\cite{Candes:2009uq}]
+\begin{theorem}
 \label{thm:exact_matrix_recovery}
 Let the (slim) SVD of the original matrix $L_0$ be given by $L_0 = U \Sigma V^T$, and assume that the following conditions hold:
 \begin{itemize}
