--- a/report/report/theory.tex
+++ b/report/report/theory.tex
@@ -174,6 +174,8 @@ Note that since $P_{T^\perp}$ is an orthogonal projection, we have
 
 and for any dyad $e_i e_j^*$, we have
 
+%TODO: say why and where this is used?
+
 \begin{align*}
 \|P_{T^\perp} e_ie_j^*\|_F^2
 &= Tr\left( (I-UU^*)e_ie_j^*(I-VV^*)(I-VV^*)^*e_je_i^*(I-UU^*)^* \right) \\
@@ -515,9 +517,6 @@ F & = & P_{\Omega} \left( \frac{W^{L}+W^{S}+UV^{*}}{\lambda} \right)
 \end{eqnarray*}
 
 
-From Lemma~(\ref{wl}) and Lemma (\ref{ws}), we can check that $(W,F,D)$
-satisfies the conditions of Lemma (\ref{lem:dual_cert}), thus establishing the probabilistic
-guarantee.
+From Lemma~(\ref{wl}) and Lemma~(\ref{ws}), we can check that $(W,F,D)$ satisfies the conditions of Lemma~(\ref{lem:dual_cert}), thus establishing the probabilistic guarantee.
 
-The following section will discuss in depth how to construct $W^{L}$and $W^{S}$ that can
-will satisfy   Lemma (\ref{wl}) and Lemma (\ref{ws}). 
+The following section will discuss in depth how to construct $W^{L}$ and $W^{S}$ that satisfy conditions of Lemma~(\ref{wl}) and Lemma~(\ref{ws}). 
