--- a/report/report/conclusion.tex
+++ b/report/report/conclusion.tex
@@ -4,7 +4,7 @@
 
 In this report, we study Robust PCA with respect to its theory, algorithms and applications.
 
-In the theory part, we start with a survey of different variants and generalization of Robust PCA. We then focus our discussion on the the details of the proof of the probabilistic guarantee of recovery of a low rank matrix corrupted from sparse noise via a convex optimization involving a heuristic of minimizing~$\ell_1$-norm and nuclear norm. Finally, we extend and analyze the robust PCA framework on problems where the rank of the low rank component is known.   
+In the theory part, we focus our discussion on the the details of the proof of the probabilistic guarantee of recovery of a low rank matrix corrupted from sparse noise via a convex optimization involving a heuristic of minimizing~$\ell_1$-norm and nuclear norm. Then, we  survey different existing variants and generalization of Robust PCA. Finally, we extend and analyze the robust PCA framework on problems where the rank of the low rank component is known.   
 
 In the algorithm part, we survey different algorithms to implement the Robust PCA. Then we compare their theoretical complexity and convergence rate on synthetic data. We remark that the bottleneck to the algorithm lies on the computation of SVD of matrix. Regarding this, we have studied various methods to alleviate this bottleneck. 
 
