--- a/report/report/report.tex
+++ b/report/report/report.tex
@@ -14,6 +14,9 @@
 \input{introduction.tex}
 
 %============================================================================================
+\tableofcontents
+
+%============================================================================================
 \chapter{Theory}
 \label{theory:chapter}
 \input{theory.tex}
