--- a/report/report/theory_proofs.tex
+++ b/report/report/theory_proofs.tex
@@ -19,7 +19,7 @@ The golfing scheme involves creating a $W^{L}$ according to the following method
 
 We first list a number of facts that will be used in the proof of Lemma~(\ref{wl}).
 
-\begin{fact}
+\begin{fact}[\cite{Candes:2011fk}]
 \label{fact2}
 If we fix $Z\in T$, $\Omega_{0}\sim Bern(\rho_{0})$, and $\rho_{0}\ge C_{0}\epsilon^{-2}\frac{\mu r\log n}{n}$ , then with high probability, we will have,
 
@@ -28,7 +28,7 @@ If we fix $Z\in T$, $\Omega_{0}\sim Bern(\rho_{0})$, and $\rho_{0}\ge C_{0}\epsi
 \|Z-\rho_{0}^{-1}P_{T}P_{\Omega_{0}}(Z)\|_{\infty}\le\epsilon\|Z\|_{\infty}
 \]
 
-\begin{fact}
+\begin{fact}[\cite{Candes:2011fk}]
 \label{fact3}
 If we fix $Z$, $\Omega_{0}\sim Bern(\rho_{0})$, and $\rho_{0}\ge C_{0}\frac{\mu\log n}{n}$, then with high probability,
 we will have,
@@ -36,7 +36,7 @@ we will have,
 \|(I-\rho_{0}^{-1}P_{\Omega_{0}})Z\| & \le & C_{0}^{'}\sqrt{\frac{n\log n}{\rho_{0}}}\|Z\|_{\infty}
 \end{eqnarray*}
 
-\begin{fact}
+\begin{fact}[\cite{Candes:2011fk}]
 \label{fact4}
 If $\Omega_{0}\sim Bern(\rho_{0})$,$\rho_{0}\ge C_{0}\epsilon^{-2}\frac{\mu r\log n}{n}$, then with high probability, we will have,
 
@@ -44,7 +44,7 @@ If $\Omega_{0}\sim Bern(\rho_{0})$,$\rho_{0}\ge C_{0}\epsilon^{-2}\frac{\mu r\lo
 \|P_{T}-\rho_{0}^{-1}P_{T}P_{\Omega_{0}}P_{T}\|\le\epsilon
 \]
 
-\begin{fact}
+\begin{fact}[\cite{Candes:2011fk}]
 If $\Omega_{0}\sim Bern(\rho)$ and $1-\rho\ge C_{0}\epsilon^{-2}\frac{\mu r\log n}{n}$, then with high probability $\|P_{\Omega}P_{T}\|^{2}\le\rho+\epsilon$
 \end{fact}
 \end{fact}
