--- a/report/report/generalization.tex
+++ b/report/report/generalization.tex
@@ -61,7 +61,7 @@ Note that this formulation allows us to optimize over $\mu_{i},p_{i}q_{i}$ seque
 
 
 %-----------------------------------------------------------------------------------------------------------------------------------------------------------------
-\subsection{Simplification using $L_{1}$ heuristic}
+\subsection{Simplification using $\ell_{1}$ heuristic}
 
 
 %------------------------------------------------------------------------------
