--- a/report/report/report.tex
+++ b/report/report/report.tex
@@ -1,6 +1,8 @@
 \documentclass{../../common/projectreport}
 \input{../../common/defs.tex}
 
+\usepackage[pdfauthor={M. Balandat, W. Krichene, C.P. Lam and K.K. Lam},pdftitle={EE227A Spr12 Project Report: Robust PCA},pagebackref=true,pdftex]{hyperref}
+
 %============================================================================================
 
 \title{\Large EE227 Project Report \\ Robust Principal Component Analysis}
